bad/assign_new_array_class_void.example_compiler_output
ERROR
[1mbad/assign_new_array_class_void.lat:7:11: [1;31merror: [0;1mleft side is not assignable[m
	new Y[3] = vfunc();
	         [1;32m^[m
[1mbad/assign_new_array_class_void.lat:7:2: [1;34mnote: [0;1mleft side starts here[m
	new Y[3] = vfunc();
	[1;32m^[m
